java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting7/StaticAndSingleImportConflict.java
/*
 * Copyright 2000-2011 JetBrains s.r.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import x.Base1.D;
import static <error descr="'D' is already defined in a single-type import">x.Base2.D</error>;

class UsageMixed {
  void use() {
    D.class.getName();
  }
}